# nyp

./: Cargo.toml  run-at.sh
.github/workflows/: rust.yml
src/: exec.rs  main.rs
src/agent/: mod.rs  pnpm.rs  utils.rs  yarn.rs
src/cli/: mod.rs  ni.rs
src/lib/: exec.rs  exit.rs  fs_utils.rs  mod.rs
src/lib/agent/: mod.rs  pnpm.rs  utils.rs  yarn.rs
src/lib/cli/: mod.rs  ni.rs
tests/: ni_npm.rs
tests/fixtures/npm/: package-lock.json  package.json
tests/fixtures/pnpm/: package.json  pnpm-lock.yaml
tests/fixtures/pnpm_ws/: package.json  pnpm-lock.yaml
tests/fixtures/yarn/: package.json
