[package]
name = "nyp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.12", features = ["derive"] }
subprocess = "0.2.9"

[profile.release]
lto = "fat"
panic = "abort"
strip = true
opt-level = "z"  # Optimize for size.
codegen-units = 1

# cargo +nightly build -Z build-std=std,panic_abort --target x86_64-unknown-linux-gnu --release