[package]
name = "nyp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.0", features = ["derive"] }
dialoguer = { version = "0.10.4", default-features = false, features = ["completion"]  }
subprocess = "0.2.9"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"

[profile.release]
lto = true
panic = "abort"
#strip = true
opt-level = "s"  # Optimize for size.
codegen-units = 1

# cargo +nightly build -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target x86_64-unknown-linux-gnu --release
# cargo +nightly build --release -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort --target $target